--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <script>
     function redirigir() {
-        window.location.href = "hackeo.html";
+        window.location.href = "simulacion.html";
     }
 </script>
 
