--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario registro davante</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -10,54 +12,63 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
         }
 
         .fake-form {
             background: white;
             padding: 25px;
-            width: 320px;
+            width: 100%;
+            max-width: 350px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.2);
             text-align: center;
         }
 
         .fake-form img {
-            width: 120px;        /* tamaño del logo */
-            margin-bottom: 15px; /* separación */
+            width: 40%;
+            max-width: 140px;
+            margin-bottom: 15px;
         }
 
         .fake-form h2 {
             color: #333;
             margin: 0 0 15px 0;
+            font-size: 1.4rem;
         }
 
         input {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
+            font-size: 1rem;
         }
 
         button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background: #0078FF;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            font-size: 1rem;
+        }
+
+        button:active {
+            background: #005FCC;
         }
     </style>
 </head>
+
 <body>
 
 <div class="fake-form">
-
-    <!-- 🔥 Logo de Davante -->
     <img src="descarga.png" alt="Logo Davante">
-
     <h2>Iniciar sesión</h2>
 
     <input type="text" id="usuario" placeholder="Correo electrónico">
@@ -67,11 +78,10 @@
 </div>
 
 <script>
-    function redirigir() {
-        window.location.href = "simulacion.html";
-    }
+function redirigir() {
+    window.location.href = "simulacion.html";
+}
 </script>
 
 </body>
 </html>
-
